--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,5 +5,8 @@ tasks:
     command: java app
 ports:
   - port: 6080
+    onOpen: open-preview
   - port: 5900
+    onOpen: ignore
   - port: 35900
+    onOpen: ignore
